# countrycode-rs

./: Cargo.toml
countrycode/: Cargo.toml  README.md
countrycode/src/: csv_format.rs  record.rs
countrycode/tests/: static.rs
