[package]
name = "countrycode"
version = "0.1.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "https://countrycode.org/ ALL COUNTRY CODES"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/countrycode-rs"
homepage = "https://github.com/bk-rs/countrycode-rs"
documentation = "https://docs.rs/countrycode"
keywords = []
categories = []
readme = "README.md"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["once_cell"]

[dependencies]
serde = { version = "1.0", default_features = false, features = ["std", "derive"] }
csv = { version = "1.1", default_features = false }

once_cell = { version = "1.10", default_features = false, features = ["std"], optional = true }
